@@ -1,7 +1,12 @@
 application: goo-reader
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: false
+
+libraries:
+- name: django
+  version: "1.2"
 
 handlers:
 - url: /robots.txt
